# vrm-toolchain-ue

./: .editorconfig  .gitattributes  .gitignore  BUILD_FIX_SUMMARY.md  GITHUB_PR_GUIDE.txt  IMPLEMENTATION.md  LICENSE  PR_BODY.md  PR_CHECKLIST.txt  README.md  SUBMISSION_SUMMARY.md  _codeql_detected_source_root  bp_restore_final.json  bp_solo.json  bp_temp_relax.json  build_log.txt  package_output.txt  restore_min.json  restore_payload.json  restore_protection.json
.github/scripts/: branch-protection-backup.json  branch-protection-disable.json  branch-protection-restore.json  branch-protection-temp.json  pr23-poll.ps1  pr24-active-repoll.ps1  pr24-poll.ps1
.github/workflows/: build-plugin-self-hosted.yml  build-plugin.yml  ci-lite.yml  ci-shim.yml  ci.yml  lint-workflows.yml  sanity-checks.yml
Docs/: CHANGELOG.md  CI.md  INSTALL.md  RELEASING.md  TROUBLESHOOTING.md  Versions.md
HostProject/: HostProject.uproject  Plugins  README.md
HostProject/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
HostProject/Source/: HostProject.Target.cs  HostProjectEditor.Target.cs
HostProject/Source/HostProject/: HostProject.Build.cs
Plugins/VrmToolchain/: README.md  VrmToolchain.uplugin
Plugins/VrmToolchain/Config/: FilterPlugin.ini
Plugins/VrmToolchain/Docs/: Naming.md  RetargetScaffolding.md
Plugins/VrmToolchain/Resources/: README.md
Plugins/VrmToolchain/Source/VrmToolchain/: VrmToolchain.Build.cs
Plugins/VrmToolchain/Source/VrmToolchain/Private/: VrmMetaAsset.cpp  VrmMetadata.cpp  VrmMetadataTests.cpp  VrmSdkFacadeHelpers.cpp  VrmSourceAsset.cpp  VrmToolchain.cpp  VrmToolchainBPLibrary.cpp
Plugins/VrmToolchain/Source/VrmToolchain/Public/: VrmMetadata.h  VrmMetadataAsset.h  VrmToolchain.h  VrmToolchainBPLibrary.h  VrmToolchainWrapper.h
Plugins/VrmToolchain/Source/VrmToolchainEditor/: VrmToolchainEditor.Build.cs
Plugins/VrmToolchain/Source/VrmToolchainEditor/Private/: AssetDefinition_VrmSourceAsset.cpp  (+40 more)
Plugins/VrmToolchain/Source/VrmToolchainRuntime/: VrmToolchainRuntime.Build.cs
RELEASES/: green-ue5.7-2026-01-23.sha256  green-ue5.7-2026-01-24.sha256  green-ue5.7-2026-01-24b.sha256  test-gate-validation.sha256
Scripts/: CheckPowerShellNoTernary.ps1  CheckVrmValidate.ps1  FetchVrmSdk.ps1  PackagePlugin.ps1  PostAutomationResultsToPR.ps1  PrepareShimForCi.ps1  ReleaseGate.ps1  RunAutomationTests.ps1  ValidatePackage.ps1  VerifyVrmSdkLayout.ps1  VrmSdkVersion.json
Shim/: .gitkeep
Tests/Shim/: CMakeLists.txt
(+43 files in other folders)
